--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -116,7 +116,7 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ")
   img {
     aspect-ratio: 1 / 1;
     object-fit: cover;
-    width: 128px;
+    width: 16rem;
     border-radius: 16px;
   }
 
