--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -9,6 +9,7 @@ import Git from "@/icons/git.astro"
 import GitHub from "@/icons/GitHub.astro"
 import Tailwind from "@/icons/tailwind.astro"
 import Figma from "@/icons/Figma.astro"
+import Boostrap from "@/icons/Bootstrap.astro"
 import { skills } from "@cv"
 
 
@@ -21,19 +22,20 @@ const SKILLS_ICONS: Record<string, any> = {
         Git,
         GitHub,
         Tailwind,
-        Figma
+        Figma,
+        Boostrap
 }
 ---
 <Section title="Habilidades">
     <ul>
         {
           skills.map(({ name }) => {
-            const iconName = name === "Next.js" ? "Next" : name
+            const iconName = name 
             const Icon = SKILLS_ICONS[iconName]
     
             return (
               <li>
-                {Icon && <Icon />} <span>{name}</span>
+                <span>{name} </span> / 
               </li>
             )
           })
@@ -50,13 +52,14 @@ const SKILLS_ICONS: Record<string, any> = {
   
     li {
       align-items: center;
-      background: #eee;
       border-radius: 6px;
-      color: black;
+      color: #474747;
       display: flex;
-      font-size: 0.8rem;
+      font-size: .9rem;
+      font-family: Visuelt Pro,Helvetica,Arial,sans-serif;
       font-weight: 500;
+      line-height: 1.75rem;
       gap: 4px;
-      padding: 0.2rem 0.6rem;
+      padding-inline: 4px;
     }
   </style>
