Sección Skills, Certificados

--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -37,12 +37,11 @@ import { education } from "@cv"
     ul {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 32px;
   }
 
   article h3 {
-    font-weight: 600;
-    line-height: 1.5;
+    font-weight: 500;
     color: #111;
   }
 
@@ -54,9 +53,12 @@ import { education } from "@cv"
   }
 
   time {
+    text-align: right;
     color: #555;
     font-size: 0.85rem;
+    font-weight: 400;
     min-width: 102px;
+    
   }
 
   @media (width <= 700px) {
