--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -104,6 +104,7 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ")
 
   h1 {
     font-size: 2rem;
+    line-height: 1.2;
   }
 
   h2 {
@@ -116,8 +117,9 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ")
   img {
     aspect-ratio: 1 / 1;
     object-fit: cover;
-    width: 16rem;
-    border-radius: 16px;
+    width: 14rem;
+    height: auto;
+    border-radius: 8px;
   }
 
   span {
