--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,9 @@ import Experience from "@/components/sections/Experience.astro"
 import Hero from "@/components/sections/Hero.astro"
 import Projects from "@/components/sections/Projects.astro"
 import Skills from "@/components/sections/Skills.astro"
+import Certificates from "@/components/sections/Certificates.astro"
+import  Languages  from "@/components/sections/Languages.astro"
 import KeyboardManager from "@/components/KeyboardManager.astro"
-
 import {basics} from "@cv"
 const { name, label } = basics
 ---
@@ -21,6 +22,8 @@ const { name, label } = basics
 		<Education />
 		<Projects />
 		<Skills />
+		<Certificates />
+		<Languages />
 	</main>
 
 	<KeyboardManager />
