--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,30 +1,37 @@
 ---
-
-const {title} = Astro.props
+// se ejecuta en el servidor o en build time <----
+const { title } = Astro.props
 ---
 
 <section>
     {title && <h2>{title}</h2> }
     <slot />
 </section>
-    <script type="module" src="https://unpkg.com/ninja-keys?module"></script>
+
+  <script>
+    // se ejecuta en el cliente <----
+  </script>
+
+
+   <!--  <script type="module" src="https://unpkg.com/ninja-keys?module"></script> -->
 
   
 <style>
      section {
     max-width: 700px;
-    margin: 0 auto 38px;
-	display: flex;
-	flex-direction: column;
-	gap: 12px;
+    margin: 0 auto 48px;
+   /*  display: flex;
+    flex-direction: column;
+    gap: 8px; */
   }
 
-  h2 {
-    margin-bottom: 8px;
+  h2{
     font-weight: 700;
+    letter-spacing: ;
     line-height: 1.5;
+    margin-bottom: 8px;
     font-size: 1.5rem;
-  }
+}
 
   @media (width <= 700px) {
     section {
