--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -49,11 +49,10 @@ import { work } from "@cv"
      ul {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 32px;
   }
   article h3 {
     font-weight: 600;
-	line-height: 1.5;
     color: #111;
   }
 
@@ -68,47 +67,24 @@ import { work } from "@cv"
   article h4 {
     color: #222;
     font-weight: 600;
-    line-height: 1;
+    line-height: 1.5rem;
     font-size: .875rem;
-    margin-top: 8px;
-    letter-spacing: ;
   }
   header{
 	display: flex;
 	justify-content: space-between;
-	align-items: baseline;
+	align-items: flex-start;
 	margin-bottom: 4px;
   }
 
 
-  /* article h3 {
-    font-weight: 500;
-    color: #111;
-  }
-
-  article a {
-    color: #111;
-  }
-
-  article a:hover {
-    text-decoration: underline;
-  }
-
-  article h4 {
-    color: #222;
-    font-weight: 400;
-  } */
-
- /*  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 4px;
-  } */
+  
 
   time {
+    text-align: right;
     color: #555;
     font-size: 0.85rem;
+    font-weight: 400;
     min-width: 102px;
   }
 
