--- a/src/icons/Mail.astro
+++ b/src/icons/Mail.astro
@@ -4,7 +4,7 @@
   height="16"
   viewBox="0 0 24 24"
   fill="none"
-  stroke="currentColor"
+  stroke="#1C274C"
   stroke-width="2"
   stroke-linecap="round"
   stroke-linejoin="round"
