--- a/src/icons/WorldMap.astro
+++ b/src/icons/WorldMap.astro
@@ -4,7 +4,7 @@
   height="12"
   viewBox="0 0 24 24"
   fill="none"
-  stroke="currentColor"
+  stroke="#0F0F0F"
   stroke-width="2"
   stroke-linecap="round"
   stroke-linejoin="round"
