--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -106,15 +106,25 @@ h1{
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
-h2{
-	font-size: 20px;
-}
+/* h2{
+    font-weight: 700;
+    letter-spacing: ;
+    line-height: 1.5rem;
+    margin-bottom: 4px;
+    font-size: 1.5rem;
+} 
+h3{
+  /* font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  color: #111;
+} */
   p {
-    color: #434343;
+    color: #111;
     font-size: 0.9rem;
     line-height: 1.5;
 	font-weight: 400;
-    margin-top: 0.5rem;
+    margin: 0;
     text-wrap: pretty;
   }
  
