Correcciones de Ortografia

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -3,6 +3,6 @@ import Section from "../Section.astro"
 import { basics } from "@cv"
 const { summary } = basics
 ---
-<Section title="Sobre Mi">
+<Section title="Sobre Mí">
     <p>{summary}</p>
 </Section>
